<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/car_parking1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/car_parking1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/car_parking2"/>
    <Button
            android:text="@string/car_parking2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/car_parking2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/car_parking1"
            app:layout_constraintBottom_toTopOf="@+id/car_parking3"/>
    <Button
            android:text="@string/car_parking3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/car_parking3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/car_parking2"
            app:layout_constraintBottom_toTopOf="@+id/name_text"/>
    <TextView
            android:text="@string/car_parking"
            android:layout_width="182dp"
            android:layout_height="0dp"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:fontFamily="@font/roboto" android:textSize="24sp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"
            android:textColor="#F44336"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_text"
            android:hint="@string/name_text" android:fontFamily="@font/roboto" android:autofillHints=""
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" tools:targetApi="o"
            android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/car_parking3"
            app:layout_constraintBottom_toTopOf="@+id/license_plate"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/license_plate"
            android:hint="@string/license_plate_text" android:fontFamily="@font/roboto" android:autofillHints=""
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/name_text" tools:targetApi="o"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/car_model"
            android:hint="@string/car_model_text" android:fontFamily="@font/roboto" android:autofillHints=""
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/license_plate" tools:targetApi="o"/>
    <Button
            android:text="@string/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="635dp"
            android:id="@+id/update_button"
            android:background="@android:color/holo_green_light" app:layout_constraintStart_toStartOf="@+id/car_model"
    />
    <Button
            android:text="@string/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="635dp"
            android:id="@+id/delete_button"
            android:background="@android:color/holo_red_light" app:layout_constraintEnd_toEndOf="@+id/car_model"
    />
</androidx.constraintlayout.widget.ConstraintLayout>